# motionplanningtoolkit

./: .gitignore  CMakeLists.txt  README.md  anytimeplanners.hpp  blimp.inst  blimpplanners.hpp  bullet.inst  domains.hpp  experiments.bash  main.cpp  mesh_testing.cpp  omnidirectional.inst  plannerfunctions.hpp  planners.hpp  simple.inst  snake.inst  start-vrep.sh
agents/: OmniMultiD.hpp  abstract.hpp  abstracttransformstate.hpp  blimp.hpp  dubins.hpp  geometric.hpp  omni2d.hpp  omnidirectional.hpp  omnimultid.hpp  quadcopter.hpp  snake_trailers.hpp
bullet_interface/: GLDebugDrawer.hpp  bullet_interface.hpp  bullet_raycast_vehicle.hpp  heightfield.h
description_files/: new_domain.bash  new_domain.sh
description_files/blimp/: blimp.dom
description_files/blimp/algorithms/: fbiased.alg  fbiasedshell.alg  kpiece.alg  new.alg  pprm.alg  pprmsst.alg  rrtconnect.alg
description_files/blimp/instances/: 0.inst  1  10.inst  11.inst  12  13.inst  14.inst  15  16  17  18  19.inst  2  20.inst  21.inst  22.inst  23.inst  24.inst  25.inst  26.inst  27.inst  28.inst  29.inst  3  30.inst  31.inst  32.inst  33.inst  34.inst  35.inst  36.inst  37.inst  38.inst  39.inst  4  40.inst  41.inst  42.inst  43.inst  44.inst  (+61 more)
description_files/bugtrap/: bugtrap.dom  bugtrap.inst
description_files/bugtrap/algorithms/: anytimepprmsst.alg  anytimerestartingest.alg  aorrt.alg  aorrt2.alg  pprm.alg  sstgrid.alg
description_files/bugtrap/instances/: 0  13  15  18  19  2  6  7
description_files/geometric/: easy.dom  easy_ompl.cfg
description_files/instances/planarlinkage/: 5d.inst  5d_0.inst  (+402 more)
description_files/kink/: kink.dom
description_files/kink2/: kink2.dom  kink2.inst
description_files/narrowpassagefull/: narrowpassagefull.dom
description_files/narrowpassagehalf/: narrowpassagehalf.dom
description_files/planarlinkage/: planarlinkage.dom
description_files/quadcopter/: quadcopter.dom
description_files/snake/: snake.dom
discrete_searches/: aees.hpp  simplebestfirst.hpp
discretizations/workspace/: griddiscretization.hpp  lazyprmlite.hpp  prmlite.hpp
environment_models/: Apartment_env.dae  another_box.dae  box.dae
mesh_models/agent_models/: Easy_robot.dae  blimp-small.dae  blimp.3ds  blimp.dae  blimp2.dae  simple_blimp2.dxf  snake_body.dxf  test.3ds  ztall.dae
mesh_models/environment_models/: blimp_world.dxf  divider.dae  model.dae  snake_world.dxf  snake_world_scaled.dxf  unit_box.dae
planners/: anytimebidirectionalest.hpp  anytimeest.hpp  anytimerestartingest.hpp  anytimerestartingrrtwithpostprocessing.hpp  anytimerrt.hpp  aoest.hpp  aorrt.hpp  aorrt2.hpp  est.hpp  estbidirectional.hpp  kpiece.hpp  restartingrrtwithpostprocessing.hpp  reusablerrt.hpp  rrt.hpp  rrtconnect.hpp
postprocessors/: nooppostprocessor.hpp  simplepostprocessor.hpp
samplers/: fbiasedsampler.hpp  fbiasedshellsampler.hpp  fbiasedshellsampler_backup.hpp  goalbiassampler.hpp  normalsampler.hpp  probabilitydensityfunction.hpp  uniformsampler.hpp
state_abstractions/: abstractfulltransformstate.hpp  abstractxythetatransformstate.hpp  abstractxyzthetatransformstate.hpp  abstractxyztransformstate.hpp
tree_interfaces/: frequencytreeinterface.hpp  newtreeinterface.hpp  plakutreeinterface.hpp  shell.hpp  sst.hpp  sst_grid.hpp  treeinterface.hpp
utilities/: assimp_mesh_loader.hpp  connexion_3d_mouse.hpp  datafile.hpp  fcl_helpers.hpp  flann_helpers.hpp  flannkdtreewrapper.hpp  heap.hpp  instancefilemap.hpp  math.hpp  meshhandler.hpp  openglwrapper.hpp  rbtree.hpp
utilities/shaders/: shader.frag  shader.vert
vrep/: plannerfunctions.hpp  plugin.cpp  vrepinterface.hpp
vrep/description_files/: manta.inst  p3dx.inst  p3dx_with_trailers.inst  pprm_blimp.inst
vrep/models/: blimp.ttm  manta.ttm  p3dx-snake-10-trailer.ttm  p3dx-snake-4-trailer.ttm  small-snake.ttm  snake.ttm
vrep/scenes/: p3dx_simple.ttt  p3dx_trivial.ttt  p3dx_very_simple.ttt  p3dx_with_trailers.ttt  pprm_blimp.ttt  pprm_blimp_no_obs.ttt  pprm_manta.ttt  pprm_maze.ttt  pprm_snake.ttt  pprm_snake_p3dx_10_trailer.ttt
workspaces/: kink.hpp  map3d.hpp  narrowpassage.hpp  pendulum.hpp  planarlinkage.hpp  rectanglemap2d.hpp
(+1960 files in other folders)
